tests/baselines/reference/ambientErrors.errors.txt
==== tests/cases/compiler/ambientErrors.ts (18 errors) ====
    // Ambient variable with an initializer 
    declare var x = 4;
                  ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    
    // Ambient functions with invalid overloads
    declare function fn(x: number): string;
    declare function fn(x: 'foo'): number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    
    // Ambient functions with duplicate signatures
    declare function fn1(x: number): string;
    declare function fn1(x: number): string;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'fn1'.
    
    // Ambient function overloads that differ only by return type
    declare function fn2(x: number): string;
    declare function fn2(x: number): number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
    
    // Ambient function with default parameter values
    declare function fn3(x = 3);
                         ~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
    
    // Ambient function with function body
    declare function fn4() { };
                           ~
!!! error TS1037: Implementations are not allowed in ambient contexts.
    
    // Ambient enum with non - integer literal constant member
    declare enum E1 {
        y = 4.23
          ~
!!! error TS1066: Ambient enum elements can only have integer literal initializers.
    }
    
    // Ambient enum with computer member
    declare enum E2 {
        x = 'foo'.length
          ~
!!! error TS1066: Ambient enum elements can only have integer literal initializers.
    }
    
    // Ambient module with initializers for values, bodies for functions / classes
    declare module M1 {
        var x = 3;
              ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
        function fn() { }
                      ~
!!! error TS1037: Implementations are not allowed in ambient contexts.
        class C {
            static x = 3;
                     ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
            y = 4;
              ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
            constructor() { }
                          ~
!!! error TS1037: Implementations are not allowed in ambient contexts.
            fn() { }
                 ~
!!! error TS1037: Implementations are not allowed in ambient contexts.
            static sfn() { }
                         ~
!!! error TS1037: Implementations are not allowed in ambient contexts.
        }
    }
    
    // Ambient external module not in the global module
    module M2 {
        declare module 'nope' { }
                       ~~~~~~
!!! error TS2195: Ambient external module declaration must be defined in global context.
    }
    
    // Ambient external module with a string literal name that isn't a top level external module name
    declare module '../foo' { }
                   ~~~~~~~~
!!! error TS2196: Ambient external module declaration cannot specify relative module name.
    
    // Ambient external module with export assignment and other exported members
    declare module 'bar' {
        var n;
        export var q;
        export = n;
        ~~~~~~~~~~~
!!! error TS1064: Export assignment not allowed in module with exported element.
    }
    